first commit of end project

--- a/src/Components/ItemDetail/ItemDetail.css
+++ b/src/Components/ItemDetail/ItemDetail.css
@@ -1,29 +1,28 @@
-.containerItemDetail{
-    width: 100%;
-    height: 400px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
+.containerItemDetail {
+  width: 100%;
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
 
-.containerImage{
-    width: 40%;
-    display: flex;
-    justify-content: center;
+.containerImage {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
-.containerImage > img{
-    width: 50%;
-    height: 300px;
-    object-fit: cover;
+.containerImage > img {
+  width: 40%;
+  height: 300px;
+  object-fit: contain;
 }
 
-
-.containerDetail{
-    width: 60%;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    height: 300px;
-    color: #7F669D;
+.containerDetail {
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  height: 300px;
+  color: #7f669d;
 }
