--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -1,26 +1,27 @@
-.containerNavbar{
-    width: 100%;
-    height: 10vh;
-    background-color: #7F669D;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.containerNavbar {
+  width: 100%;
+  height: 10vh;
+  background-color: black;
+  display: flex;
+  padding-left: 1%;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.containerList{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    gap: 30px;
+.containerList {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 30px;
 }
 
-.navbarItem{
-    list-style: none;
-    cursor: pointer;
-    font-size: 1.2rem;
-    /* box-shadow: 2px 2px 2px 2px grey; */
-    padding: 7px 10px;
-    border-radius: 10px;
-    background-color: #e1d4c7;
-    text-align: center;
+.navbarItem {
+  list-style: none;
+  cursor: pointer;
+  font-size: 1.2rem;
+  /* box-shadow: 2px 2px 2px 2px grey; */
+  padding: 7px 10px;
+  border-radius: 10px;
+  background-color: #e1d4c7;
+  text-align: center;
 }
